fix layout broken due to slider

--- a/htdocs/shared/css/style.css
+++ b/htdocs/shared/css/style.css
@@ -1112,7 +1112,7 @@ ul {
   .Quote-container-slider-item-msg__author {
     font-size: 18px;
   }
-  .Quote-container-slider-slick-prev > mg {
+  .Quote-container-slider-slick-prev > img {
     display: none;
   }
 
